<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cops \'n\' Crooks</string>
    <string name="title_activity_menu">Main Menu</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_lobby">Lobby</string>
    <string name="menu_host_game">Create game</string>
    <string name="menu_search_game">Search for games</string>
    <string name="menu_options">Options</string>
    <string name="menu_exit_game">Exit game</string>
    <string name="menu_instructions">Instructions</string>
    <string name="title_activity_instructions">Instructions</string>
    
    <string name="instructions"><b>Intro</b>\n
		Cops and Crooks is about getting the most money.\n
		One of the players controls the law enforcement (Cops) and the rest of the players are thieves (Crooks).\n
		The Crooks get money by robbing banks, post offices etc., while the Cops get money by catching and arresting Crooks.\n
		When a Cop arrests a Crook, he receives a share of the Crooks cash.\n
		The winner is the player with the most money when the game ends.\n
		
		\n<b>How the Cops move</b>\n
		The player playing as the Cops get to move only one of his or hers pawns each turn, either a policeman or the cop car (which is two tiles big). 
		The pawn can move either vertically or horizontally. 
		The cop car move two steps for every dot on the die, however, it can only move forward. 
		A policeman can go through a building that is open to two direction. 
		The cop car cannot do this, it is limited to driving on the road. 
		The policemen and cop car can pass by each other but not stop on the same tile.\n
		
		\n<b>How the Crooks move</b>\n
		The player playing as a Crook move his or her pawn the same as the policeman, either vertically or horizontally.
		A Crook must always move on his or her turn, they cannot skip it. 
		There can’t more than one Crook on a tile at any given moment. 
		Crooks can always pass by each other on the board. 
		A Crook can only pass by a policeman or the paddy wagon if the Crook is not Wanted.\n
		
		\n<b>Wanted</b>\n
		A Crook becomes Wanted if he or she:\n
			•	robs a Bank, Post office or the Travel agency\n
			•	escapes the jail\n
			•	collects stolen cash from the hideout\n
		A Crook loses the Wanted status if he or she is arrested and serves their complete prison time or by visiting depositing their money to a hideout.\n
		
		\n<b>Robbery</b>\n
		If a Crook stops on a tile that is either a Bank, Post office or a Travel agency they successfully robs the establishment and receives the loot money.\n
	
		\n<b>Arrestation</b>\n
		A Crook that is Wanted can be arrested by the Cops. 
		A Crook is arrested if a policeman or the paddy wagon stops on the same tile as the Wanted Crook. 
		The paddy wagon can arrest on both of its tiles, even two Crooks at the same time.
		The Cops can also arrest Crooks by stopping on tiles that are right by Banks and Post offices\n
		The Cops receive some of the money the crook had on him, the rest of the money goes to the bank.\n
		
		\n<b>Escape from jail</b>\n
		To escape from jail a crook has to either wait 3 turns or roll a six. In the latter case the crook can walk these six steps immediately.\n

		\n<b>Metro</b>\n
		Both the Crooks and Cops (excluding the cop car) can travel around the city by metro. They do this by stopping on a Metro tile and then travel on their next turn.\n

		\n<b>Hideout</b>\n
		Only the Crooks can enter the Hideouts. When entering a hideout they can show whether to withdraw or deposit money. Keep in mind that there are multiple separate hideouts. Stored money in one hideout cannot be accessed in another.\n


		\n<b>Getaway</b>\n
		When a Crook as decided that they have enough money, they can try to get away. To do this they must on land on a Getaway tile and pay for a ticket (the money goes to the Travel Agency, which can now be robbed) and on their next turn they get away.

		\n\nHowever, they can be stopped by the Cops. If a Cop reaches an Intelligence Agency before the Crooks next turn, the getaway attempt will be thwarted and the Crook arrested.

		\nIf the getaway is successful, the Crook keeps his money and is out of reach from the Cops and waiting for the game to end.\n

		\n<b>Game end</b>\n
		The game ends when all crooks have either been caught four times or successfully fled from the map. When this happens the player with the most money wins.\n\n
		
	</string>
	
    <string name="title_activity_options">Options</string>
    <string name="options_name">Name:</string>
    <string name="options_volume">Volume:</string>
    <string name="options_sound">Sound:</string>
    <string name="options_on_off">on/off</string>
    <string name="title_activity_game_browse">Game Browser</string>
    <string name="title_activity_host">Create Game</string>
    
    
    <string name="host_game">Create Game</string>
    <string name="game_name">Game name:</string>
    <string name="player_cap">Player cap:</string>
    <string name="player_cap_seekbar_default">[ 2 ]</string>
    <string name="game_lobby">Game Lobby</string>
    <string name="lobby_players">Players: </string>
    <string name="lobby_start_game">Start game</string>
    <string name="game_name_hint">Enter game-name&#8230;</string>
    
    
    <string name="game_browser">Game Browser</string>
    <string name="has_started">Started</string>
    <string name="search_game_refresh">Refresh</string>
    <string name="get_new_games">Get list</string>
    <string name="join_game">Join</string>
    <string name="options_ip">Server IP:</string>
    <string name="display_active_games">Display your active games</string>
    
    <string name="desc_lobby_role">Set the player-role</string>
</resources>