<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuActivity" >

    <TextView
        android:id="@+id/menuTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="30sp" />

    <Button
        android:id="@+id/host_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_button_margin"
        android:text="@string/menu_host_game"
        android:textSize="24sp"
        android:onClick="enterGame" />

    <Button
        android:id="@+id/search_game_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_button_margin"
        android:text="@string/menu_search_game"
        android:textSize="24sp"
        android:onClick="openSearchGame" />
    
    <Button
        android:id="@+id/instructions_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_button_margin"
        android:text="@string/menu_instructions"
        android:textSize="24sp"
        android:onClick="openInstructions" />

    <Button
        android:id="@+id/options_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/menu_button_margin"
        android:text="@string/menu_options"
        android:textSize="24sp"
        android:onClick="openOptions" />

</TableLayout>
