<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GameBrowseActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_browser" />

        <Button
            android:id="@+id/button_start_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="refreshGameList"
            android:text="@string/search_game_refresh" />

        <Button
            android:id="@+id/getGameListButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="getGameList"
            android:text="@string/get_new_games" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <CheckBox
            android:id="@+id/hasStartedCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/has_started" />

    </TableRow>

    <ListView
        android:id="@+id/gameListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true" >
    </ListView>

</TableLayout>
