<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HostActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/gameNameDisplayTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/host_game"
            android:textSize="30sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/menuTitleTextView"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:gravity="center_vertical"
            android:text="@string/game_name"
            android:layout_width="0dp"
            android:layout_weight="30" />

        <EditText
            android:id="@+id/gameNameEditText"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/game_name_hint"
            android:layout_width="0dp"
            android:layout_weight="70" >

            <requestFocus />
        </EditText>
    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/soundTextView"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:gravity="center|left"
            android:text="@string/player_cap"
            android:layout_width="0dp"
            android:layout_weight="30" />

        <SeekBar
            android:id="@+id/playerCapSeekBar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="60"
            android:max="3"
            android:paddingLeft="16dp"
            android:paddingRight="16dp" />

        <TextView
            android:id="@+id/seekBarTextView"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/player_cap_seekbar_default"
            android:layout_width="0dp"
            android:layout_weight="10" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_weight="1" >

        <Button
            android:id="@+id/hostGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:text="@string/host_game"
            android:onClick="hostGame" />

    </TableRow>

</TableLayout>
