<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LobbyActivity" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/menuTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_lobby"
            android:textSize="30sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/gameNameTextView"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/game_name"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="40" />

        <TextView
            android:id="@+id/gameNameDisplayTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:gravity="left"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/playerCapTextView"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/lobby_players"
            android:textSize="18sp"
            android:layout_width="0dp"
            android:layout_weight="40" />

        <TextView
            android:id="@+id/playerCapDisplayTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:gravity="left"
            android:textSize="18sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" >

        <ListView
            android:id="@+id/playerListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:listheader="@android:layout/simple_list_item_1"
            tools:listitem="@android:layout/simple_list_item_1" >

        </ListView>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_weight="0" >

        <Button
            android:id="@+id/joinGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="joinGame"
            android:text="@string/join_game" />

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lobby_start_game"
            android:onClick="startGame" />

    </TableRow>
    
</TableLayout>